syntax = "proto3";
package server.engine.base;

message SubmitRequest {
    string user_id = 1;
    string quote_asset_id = 2;
    string base_asset_id = 3;
    string price = 4;
    string quote_asset_volume = 5;
    string presentation = 6;
}
message SubmitResponse {}

message CancelRequest {
    string order_id = 1;
}

message CancelResponse {}

message TransferRequest {
    string from_valut_id = 1;
    string to_valut_id = 2;
    string asset_id = 3;
    string amount = 4;
    string fee_fraction = 5;
}
message TransferResponse {
    string transfer_id = 1;
}

message RevertTransferRequest {
    string transfer_id = 1;
}
message RevertTransferResponse {
    string amount_transfer_id = 1;
    string fee_transfer_id = 2;
}

service Engine {
    rpc Submit(SubmitRequest) returns (SubmitResponse) {}
    rpc Transfer(TransferRequest) returns (TransferResponse) {}
    rpc RevertTransfer(RevertTransferRequest) returns (RevertTransferResponse) {}
    rpc Cancel(CancelRequest) returns (CancelResponse) {}
}